<resources>
    <string name="app_name">TheMovieBooking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_login" formatted="true">Login</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with Google</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_get_your_ticket">Get Your Ticket</string>
    <string name="lbl_payment_method">Payment Method</string>
    <string name="lbl_get_it_now">Get It Now</string>
    <string name="lbl_booking_no">Booking no.</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_show_time_date">Show time - date</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_card_holder">Card Holder</string>
    <string name="lbl_expiration_date">Expiration Date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_sub_total">Sub total:</string>
    <string name="lbl_expires">Expires</string>
    <string name="lbl_tickets">Tickets</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_enter_promo_code">Enter promo code</string>
    <string name="lbl_don_t_have_any_promo_code">Don\'t have any promo code?</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_promotion_code">Promotion Code</string>
	<string name="lbl_select_a_language">Select A Language</string>
	<string name="lbl_terms_of_services">Terms of Services</string>
	<string name="lbl_help">Help</string>
	<string name="lbl_rate_us">Rate Us</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="lbl_welcome">Welcome!</string>
	<string name="lbl_welcome_back_login_to_continue">Welcome back, login to continue</string>
	<string name="lbl_plot_summary">Plot Summary</string>
	<string name="lbl_cast">Cast</string>
	<string name="lbl_now_showing">Now Showing</string>
	<string name="lbl_coming_soon">Coming Soon</string>
	<string name="lbl_log_out">Log out</string>
	<string name="lbl_please_choose_movie_time">Please choose movie time!</string>
	<string name="lbl_choose_a_payment_method">Please choose a payment method!</string>
	<string name="lbl_this_is_your_ticket">This is your ticket.</string>
	<string name="btn_next_content">Next</string>
</resources>