<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:layout_marginEnd="@dimen/margin_medium_2">

    <com.google.android.material.card.MaterialCardView
	    android:id="@+id/cvDrawerProfile"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_margin_profile_image"
        app:cardCornerRadius="@dimen/margin_large">

        <androidx.appcompat.widget.AppCompatImageView
	        android:id="@+id/ivLeftMenuProfile"
	        android:layout_width="@dimen/margin_xxlarge"
            android:layout_height="@dimen/margin_xxlarge"
            android:scaleType="centerCrop"
            android:src="@drawable/nice_girl" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@id/cvDrawerProfile"
	    android:layout_marginStart="@dimen/margin_medium_2"
	    android:layout_toEndOf="@id/cvDrawerProfile"
	    android:text="Lily Johnson"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

	<androidx.appcompat.widget.AppCompatTextView
		android:id="@+id/tvGmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/tvProfileName"
		android:layout_alignStart="@id/tvProfileName"
		android:layout_marginTop="@dimen/margin_small"
		android:layout_toEndOf="@id/cvDrawerProfile"
		android:fontFamily="monospace"
		android:textColor="@color/colorSecondaryText"
		android:textSize="@dimen/text_regular"
		tools:text="lilyjohnson@gmail.com" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvGmail"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/tvGmail"
        android:text="@string/lbl_edit"
        android:textAlignment="textEnd"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/text_regular" />

    <LinearLayout
        android:id="@+id/llPromoCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGmail"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_local_offer_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_promotion_code"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSelectALanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPromoCode"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_g_translate_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_select_a_language"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTermsOfService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSelectALanguage"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_assignment_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_terms_of_services"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTermsOfService"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_help_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_help"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRateUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llHelp"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/margin_medium_3"
            android:layout_height="@dimen/margin_medium_3"
            app:srcCompat="@drawable/ic_baseline_stars_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_rate_us"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:orientation="horizontal">

	    <androidx.appcompat.widget.AppCompatImageView
		    android:layout_width="@dimen/margin_medium_3"
		    android:layout_height="@dimen/margin_medium_3"
		    app:srcCompat="@drawable/ic_baseline_login_white_24dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:layout_marginStart="@dimen/margin_medium_2"
	        android:text="@string/lbl_log_out"
	        android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>