<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_marginTop="@dimen/margin_small"
	app:layout_behavior="@string/appbar_scrolling_view_behavior">

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="@dimen/margin_medium_2"
		android:paddingBottom="250dp">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="@dimen/margin_medium_2">

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/lblName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lbl_name"
				android:textColor="@color/colorSecondaryText" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/tilName"
				style="@style/Widget.AppCompat.EditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/lblName"
				app:boxStrokeColor="@color/colorSecondaryText"
				app:endIconMode="clear_text"
				app:errorEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:backgroundTint="@color/white"
					android:inputType="textEmailAddress" />
			</com.google.android.material.textfield.TextInputLayout>


			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/lblEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tilName"
				android:layout_marginTop="@dimen/margin_medium_2"
				android:text="@string/lbl_email"
				android:textColor="@color/colorSecondaryText" />

            <com.google.android.material.textfield.TextInputLayout
	            android:id="@+id/tilMail"
	            android:layout_width="match_parent"
                android:layout_height="wrap_content"
	            android:layout_below="@id/lblEmail"
	            app:boxStrokeColor="@color/colorSecondaryText"
	            app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
	                android:id="@+id/edtMail"
	                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/lblPassword"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tilMail"
				android:layout_marginTop="@dimen/margin_medium_2"
				android:text="@string/lbl_password"
				android:textColor="@color/colorSecondaryText" />

            <com.google.android.material.textfield.TextInputLayout
	            android:id="@+id/tilPassword"
	            android:layout_width="match_parent"
                android:layout_height="wrap_content"
	            android:layout_below="@id/lblPassword"
	            app:boxStrokeColor="@color/colorSecondaryText"
	            app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
	                android:id="@+id/edtPassword"
	                android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/lblPhone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tilPassword"
				android:layout_marginTop="@dimen/margin_medium_2"
				android:text="@string/lbl_phone"
				android:textColor="@color/colorSecondaryText" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/tilPhone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/lblPhone"

				app:boxStrokeColor="@color/colorSecondaryText"
				app:endIconMode="clear_text">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtPhone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:backgroundTint="@color/white"
					android:inputType="phone" />

			</com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lblForgetPassword"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/tilPhone"
	            android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:text="@string/lbl_forgot_password"
                android:textColor="@color/colorSecondaryText" />


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/white">

		<include
			android:id="@+id/vpLoginButtons"
			layout="@layout/view_pod_sign_in_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/margin_large" />
	</FrameLayout>

</RelativeLayout>
