<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.SnackActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_medium"
			android:layout_marginEnd="@dimen/margin_medium"
			android:background="@color/colorPrimary">

			<FrameLayout
				android:id="@+id/btnBack"
				android:layout_width="@dimen/margin_xlarge"
				android:layout_height="@dimen/margin_xlarge"
				android:layout_marginStart="@dimen/margin_medium"
				android:layout_marginTop="@dimen/margin_medium"
				android:elevation="@dimen/margin_medium">

				<androidx.appcompat.widget.AppCompatImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_gravity="center"
					android:src="@drawable/ic_baseline_chevron_left_black_24dp" />

			</FrameLayout>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvComboSet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/btnBack"
				tools:itemCount="2"
				tools:listitem="@layout/view_holder_combo_set" />


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/tilPromoCode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/rvComboSet"
				android:layout_marginStart="@dimen/margin_medium_2"
				android:layout_marginTop="@dimen/margin_medium_2"
				android:layout_marginEnd="@dimen/margin_medium_2"
				android:layout_marginBottom="@dimen/margin_medium"
				app:hintTextColor="@color/colorSecondaryText">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/edtPromoCode"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:backgroundTint="@color/white"
					android:hint="@string/lbl_enter_promo_code"
					android:inputType="textEmailAddress"
					android:textStyle="italic" />

			</com.google.android.material.textfield.TextInputLayout>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tvAnyPromo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tilPromoCode"
				android:layout_marginStart="@dimen/margin_medium_2"
				android:layout_marginEnd="@dimen/margin_medium"
				android:text="@string/lbl_don_t_have_any_promo_code"
				android:textColor="@color/colorSecondaryText"
				android:textSize="@dimen/text_regular_2x" />


			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tvGetItNow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tilPromoCode"
				android:layout_marginStart="@dimen/margin_medium"
				android:layout_marginEnd="@dimen/margin_medium"
				android:layout_toEndOf="@id/tvAnyPromo"
				android:text="@string/lbl_get_it_now"
				android:textColor="@color/black"
				android:textSize="@dimen/text_regular_2x" />


			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tvSubTotalLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tvAnyPromo"
				android:layout_marginStart="@dimen/margin_medium_2"
				android:layout_marginTop="@dimen/margin_medium_3"
				android:layout_marginEnd="@dimen/margin_medium"
				android:text="@string/lbl_sub_total"
				android:textColor="#22E462"
				android:textSize="@dimen/text_regular_2x" />

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tvSubTotal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tvAnyPromo"
				android:layout_alignTop="@id/tvSubTotalLabel"
				android:layout_toEndOf="@id/tvSubTotalLabel"
				android:text="0$"
				android:textColor="#22E462"
				android:textSize="@dimen/text_regular_2x" />


			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/tvPaymentMethod"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/tvSubTotalLabel"
				android:layout_marginStart="@dimen/margin_medium_2"
				android:layout_marginTop="@dimen/margin_medium_3"
				android:text="@string/lbl_payment_method"
				android:textColor="@color/black"
				android:textSize="@dimen/text_regular_2x"
				android:textStyle="bold" />

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvPaymentMethod"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@id/tvPaymentMethod"
				android:layout_marginStart="@dimen/margin_medium"
				android:layout_marginBottom="@dimen/margin_xxlarge"
				android:clipToPadding="false"
				android:paddingBottom="@dimen/margin_xlarge"
				tools:itemCount="3"
				tools:listitem="@layout/view_holder_payment_method" />

		</RelativeLayout>

	</ScrollView>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_gravity="bottom"
		android:layout_marginLeft="@dimen/margin_medium"
		android:layout_marginRight="@dimen/margin_medium"
		android:elevation="@dimen/margin_medium">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/btnPay"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin_medium"
			android:layout_marginEnd="@dimen/margin_medium"
			android:background="@drawable/get_started_button_background"
			android:paddingTop="@dimen/margin_medium_2"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textStyle="bold"
			tools:text="Pay $0.00" />
	</FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>