<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PaymentDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="@dimen/margin_xlarge"
            android:layout_height="@dimen/margin_xlarge"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:elevation="@dimen/margin_medium">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_chevron_left_black_24dp" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblPaymentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBack"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/lbl_payment_amount" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblPaymentAmount"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="$926.21"
            android:textColor="@color/black"
            android:textSize="@dimen/text_heading_2x"
            android:textStyle="bold" />

        <alirezat775.lib.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPaymentMethod"
            android:layout_marginTop="@dimen/margin_medium_2"
            tools:listitem="@layout/view_holder_carousel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAddNewCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/carouselView"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:drawablePadding="@dimen/margin_medium"
            android:text="@string/lbl_add_new_card"
            android:textColor="@color/color_add_new_card"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_add_circle__green_24dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/get_started_button_background"
                android:text="@string/lbl_confirm"
                android:textColor="@color/white" />
        </FrameLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>